added input field for location

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,13 +1,14 @@
 <div class="container-fluid" data-ng-controller="MyThemeController">
   <div class="jumbotron">
-    <h1>Fun Roulette!!!</h1>
     <div class="text-center">
       <h2>Fun is Just One Click Away</h2>
-      <a href="http://www.yelp.com" class="btn btn-lg btn-default">Let's Roll!</a>
+      <a href="play.html" class="btn btn-lg btn-default">Let's Roll!</a>
     </div>
       <div class="form-group">
         <label for="usr">Type a Category:</label>
-        <input type="text" class="form-control" id="usr" placeholder="Restaurants, Nightlife, etc...">
+        <input type="text" class="form-control" id="usr" placeholder="Restaurants, Brunch, Nightlife, etc...">
+        <label for="usr">Type a Location:</label>
+        <input type="text" class="form-control" id="usr" placeholder="San Fransisco, Irvine, San Clemente, etc...">
       </div>
   </div>
 </div>
