--- a/public/views/play.html
+++ b/public/views/play.html
@@ -3,7 +3,8 @@
     <h1>Fun Roulette!!!</h1>
     <div class="text-center">
       <h2>Fun is Just One Click Away</h2>
-      <a href="http://www.yelp.com" class="btn btn-lg btn-default">Let's Roll!</a>
+      <a href="http://www.yelp.com" class="btn btn-lg btn-default">Challenge Accepted!</a>
+      <a href="http://www.yelp.com" class="btn btn-lg btn-default">Roll Again!</a>
     </div>
       <div class="form-group">
         <label for="usr">Type a Category:</label>
